# tddd16-lab1

./: .gitmodules  CMakeLists.txt  Grammar  lex.cc  lex.hh  main.cc
include/: lex.hh  parser.hh
lib/: lab1.cc  lex.cc  main.cc  parser.cc
questions/: automata.dot  automata_explanation  regular_expression
test/: lex_test.cc  parser_test.cc
test/expressions/: arccos.expr  arcsin.expr  arctan.expr  complex.expr  division_left_associativity.expr  exponentiation_right_associativity.expr  function_call.expr  incorrect_program.expr  parenthesised_expression.expr
test/tokens/: float_with_exponent_downcased.sym  float_with_exponent_upcased.sym  float_with_negative_exponent_downcased.sym  float_with_negative_exponent_upcased.sym  integer_with_exponent_upcased
